modificate carte gods, fatta scelta gods, da resizare le immagini per fittare jbutton